<resources>
    <string name="app_name">Mobile Manager</string>
    <string name="app_name_by">by Lightspeed Systems</string>
    <string name="app_description">Mobile Device Manager by Lightspeed Systems</string>
    <string name="app_entry_hint">Hint: Click on the image to enter Mobile Manager.</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="application">Application</string>
    <string name="user">User</string>
    <string name="device">Device</string>
    <string name="passcode">Passcode</string>
    <string name="profile">Profile</string>
    <string name="config">Configuration</string>
    <string name="label_none">None</string>
    <string name="mdmweb_admin_home">Mobile Manager Browser</string>
    <string name="mbcweb_home">My Big Campus</string>
    <string name="main_beginbutton">Enter</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_go">Go</string>
    <string name="button_stop">Stop</string>
    <string name="button_done">Done</string>
    <string name="button_enroll">Enroll</string>
    <string name="button_sync">Sync</string>
    <string name="button_browse">Browse</string>
    <string name="button_addcount">Add Account</string>
    <string name="button_updatecheck">Check For Mobile Manager Updates</string>
    <string name="msg_updatecheck_inprogress">Checking for Mobile Manager updates...</string>
    <string name="msg_updatecheck_updating">Installing Mobile Manager updates...</string>
    <string name="msg_updatecheck_complete">Mobile Manager is up to date.</string>
    <string name="msg_update_error">Mobile Manager update error.</string>
    <string name="mdm_errormsg_title">Mobile Manager Error</string>
    <string name="login_title">Administrator Login to Mobile Manager</string>
    <string name="logindenied">Login denied.</string>
    <string name="loginsucceeded">Login OK.</string>
    <string name="loginerror">Login error. </string>
    <string name="logininprogress">Logging in...</string>
    <string name="msg_missingusername">Enter your User Name</string>
    <string name="msg_missingpassword">Enter your password</string>
    <string name="msg_accountalreadyexists">Account already exists. Enter a different name.</string>
    <string name="msg_accountadded">Account added.</string>
    <string name="msg_accountadd_error">Error adding Account.</string>
    <string name="serverurl_dlg_title">Server URL</string>
    <string name="url_error_invalid">Invalid URL.</string>
    <string name="wifi_starting">Starting Wifi...</string>
    <string name="orgname_missing_placeholder">(Device is not enrolled)</string>
    <string name="enrollcode">Enrollment Code:</string>
    <string name="enrollcode_hint">Enter the enrollment code.</string>
    <string name="enrollserver">Enrollment Server:</string>
    <string name="enroll_title">Enroll Device</string>
    <string name="enroll_edit_hint">Click to enroll or to change enrollment.</string>
    <string name="enrollcode_missing">Missing enrollment code.</string>
    <string name="enrollcode_invalid">Invalid enrollment code.</string>
    <string name="enrollsvr_missing">Missing enrollment server url.</string>
    <string name="enrollsvr_invalid">Invalid enrollment server url.</string>
    <string name="status_enrolling">Enrolling...</string>
    <string name="status_initializing">Initializing...</string>
    <string name="status_loading">Loading...</string>
    <string name="status_error">Error:</string>
    <string name="status_never">Never</string>
    <string name="status_installing">Installing</string>
    <string name="status_installpending">Install pending</string>
    <string name="status_installdownloading">Downloading installer...</string>
    <string name="status_installed">Installed</string>
    <string name="status_installfailed">Install failed</string>
    <string name="status_installcanceled">Install canceled</string>
    <string name="status_updating">Updating</string>
    <string name="status_updatepending">Update pending</string>
    <string name="status_updatedownloading">Downloading updates...</string>
    <string name="status_updated">Updated</string>
    <string name="status_updatefailed">Update failed</string>
    <string name="status_updatecanceled">Update canceled</string>
    <string name="status_uninstalling">Uninstalling</string>
    <string name="status_uninstallpending">Uninstall pending</string>
    <string name="status_uninstalled">Uninstalled</string>
    <string name="status_uninstallfailed">Uninstall failed</string>
    <string name="status_uninstallcanceled">Uninstall canceled</string>
    <string name="status_appuptodate">Mobile Manager is up to date.</string>
    <string name="status_appupdating">Mobile Manager is updating.</string>
    <string name="status_deviceadminneeded">Device Administrator must be active to run this application.\nPlease enable Device Administration and restart Mobile Manager.</string>
    <string name="device_admin_activate_title">Mobile Manager Device Administration</string>
    <string name="device_admin_activate_description">Mobile Manager is requesting permission to manage this device.</string>
    <string name="device_admin_disable_warning">Stop allowing Mobile Manager to manage this device?</string>
    <string name="gcmerror_msgtitle">Configuration Error - Google Cloud Messaging</string>
    <string name="gcmerror_nogsf">Google Services Framework is requiured but was not found.\nMobile Manager will exit.</string>
    <string name="gcmerror_gsfinsstallfailed">Google Services Framework is requiured but was not found and was unable to be installed.\nMobile Manager will exit.</string>
    <string name="gcmerror_reboottitle">Device Reboot Is Needed</string>
    <string name="gcm_reboot_after_gsfintall">Successfully installed Google Services Framework.\nPlease shutdown and restart the device.</string>
    <string name="gcmerror_permissions">A Device Permissions Error was detected.\nPlease shutdown and restart the device and try again.</string>
    <string name="gcmerror_permissions_resintallmanually">An internal error was detected.\nMobile Manager must be reinstalled.</string>
    <string name="gcmerror_permissions_resintallprompt">An internal permissions error was detected.\nMobile Manager will attempt to reinstall itself.\nIf reinstall fails, please shutdown and restart, then reinstall Mobile Manager.\n\nOpen Mobile Manager after completing the reinstall.</string>
    <string name="gcmerror_msgtitle_reinstallmdm">Reinstall Mobile Manager</string>
    <string name="gcmerror_manifest">The application manifest has an error.\nMobile Manager will exit.</string>
    <string name="gcmerror_authfailed">Google Cloud Messaging authentication error.</string>
    <string name="gcmerror_authfailed_reboot">Google Cloud Messaging authentication error.\nPlease shutdown and restart the device and try again.</string>
    <string name="gcmerror_noaccount">Gmail or Google account not found on this device.\nPlease create an account.</string>
    <string name="gcmerror_unrecoverable">Unrecoverable error installing or initializing GCM.\nMobile Manager will exit.</string>
    <string name="gcmstatus_gsf_dowloading">Downloading Google Services Framework...</string>
    <string name="gcmstatus_gsf_installing">"Installing Google Services Framework..."</string>
    <string name="gcmstatus_gsf_installed">"Installed Google Services Framework."</string>
    <string name="gcmstatus_gsf_installfailed">"Failed to install Google Services Framework."</string>
    <string name="gcmstatus_gcm_init">"Initializing Google Cloud Messaging..."</string>
    <string name="gcmerror_service_not_available">"Google Cloud Messaging error (service not available); retrying..."</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="options_clear">Clear</string>
    <string name="action_bar_loglevel">Log...</string>
     <string name="action_bar_loglevel_none">Nothing (Logging is Off)</string>
     <string name="action_bar_loglevel_error">Errors only</string>
     <string name="action_bar_loglevel_warning">Warnings and Errors</string>
     <string name="action_bar_loglevel_info">Information, Warnings, and Errors</string>
     <string name="action_bar_loglevel_debug">Debug and all the above</string>
     <string name="action_bar_loglevel_all">Everything</string>
    <string name="action_bar_clear">Clear</string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_sort">Sort</string>
    <string name="action_bar_export">Export</string>
    <string name="action_bar_refresh">Refresh</string>
    <string name="action_bar_filter">View</string>
     <string name="action_bar_filter_error">Errors</string>
     <string name="action_bar_filter_warning">Warnings</string>
     <string name="action_bar_filter_info">Information</string>
     <string name="action_bar_filter_debug">Debug</string>
     <string name="action_bar_filter_all">All</string>
   <string name="options_about">About</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_exit">Exit</string>
    <string name="clearlog_confirm_title">Clear Log Confirmation</string>
    <string name="clearlog_confirm_msg">Clear all log entries?</string>
    <string name="clearhistory_confirm_title">Clear History Confirmation</string>
    <string name="clearhistory_confirm_msg">Clear all history entries?</string>
    <string name="menulist_settings">Settings</string>
    <string name="menulist_deviceinfo">Device Information</string>
    <string name="menulist_apps">Managed Apps</string>
    <string name="menulist_history">History</string>
    <string name="menulist_diagnosticslogging">Diagnostic Logging</string>
    <string name="menulist_diagnostics">Diagnostics and Troubleshooting</string>
        <string name="menulist_servertest">   Server Communcations Test</string>
    	<string name="menulist_logging"   >   Logging</string>
    <string name="menulist_about">About Mobile Manager</string>
    <string name="settingslist_servergroup">Mobile Manager Server</string>
     <string name="settingslist_serveraddress">Network Address</string>
     <string name="settingslist_serveraddress_summary">This is the URL of the server.</string>
     <string name="settingslist_serveraddress_dlgtitle">Enter the server address.</string>
     <string name="settingslist_serverport">Network Port</string>
     <string name="settingslist_serverport_summary">This is the port number on the server.</string>
    <string name="deviceinfo_identification">Identification</string>
     <string name="deviceinfo_udid">UDID</string>
     <string name="deviceinfo_udidsummary">Unique Device Identifier</string>
     <string name="deviceinfo_serialnum">Serial Number</string>
    <string name="deviceinfo_status">Status</string>
     <string name="deviceinfo_lastsync">Last sync</string>
     <string name="deviceinfo_nextsync">Next scheduled sync</string>
     <string name="deviceinfo_batterylevel">Battery</string>
    <string name="deviceinfo_oscategory">Operating System</string>
     <string name="deviceinfo_osversion">Version</string>
     <string name="deviceinfo_osbuild">Build</string>
     <string name="deviceinfo_ossdkversion">SDK Version</string>
     <string name="deviceinfo_osbootloader">Bootloader Version</string>
    <string name="deviceinfo_deviceproduct">Product</string>
     <string name="deviceinfo_brand">Brand</string>
     <string name="deviceinfo_model">Model</string>
     <string name="deviceinfo_manufacturer">Manufacturer</string>
    <string name="servertest_toUrl">Send test message to:</string>
</resources>