<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textSvrUrlLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servertest_toUrl"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/textSvrUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="80dip"
        android:layout_marginTop="@dimen/dimension_4"
        android:inputType="none"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_done" />

        <Button
            android:id="@+id/buttonStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_stop" />

        <Button
            android:id="@+id/buttonRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_go" />

    </LinearLayout>
    
</LinearLayout>