<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:layout_marginTop="?android:attr/actionBarSize"
        />
    
       <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/LinearLayoutBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_marginTop="16dp"
	    android:layout_marginBottom="16dp"
        android:orientation="horizontal" >
    
	    <Button
	        android:id="@+id/buttonNav"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_horizontal"
	        android:onClick="showNavList"
	        android:text="@string/main_beginbutton" />
	    <Button
	        android:id="@+id/buttonLogin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center_horizontal"
	        android:onClick="showLogin"
	        android:text="@string/button_login" />
   	</LinearLayout>
   	
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
        android:orientation="horizontal" >
    
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/LinearLayoutMBC"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
		    android:orientation="vertical" >
	        
		    <ImageButton
		        android:id="@+id/imageMBC"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="4dp"
		        android:layout_marginRight="4dp"
		        android:layout_gravity="center_horizontal"
		        android:clickable="true"
		        android:maxWidth="@dimen/LSAppsLargeImage_width"
		        android:maxHeight="@dimen/LSAppsLargeImage_height"
		        android:onClick="showMBCWebView"
		        android:src="@drawable/ls_mbc" />

		    <TextView
		        android:id="@+id/labelMBC"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/mbcweb_home"
		        android:clickable="true"
		        android:onClick="showMBCWebView"
		        android:textAppearance="?android:attr/textAppearanceMedium" />

	    </LinearLayout>
    
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/LinearLayoutMDMSVR"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
		    android:orientation="vertical" >
		    
		    <ImageButton
		        android:id="@+id/imageMDMSVR"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="4dp"
		        android:layout_marginRight="4dp"
		        android:layout_gravity="center_horizontal"
		        android:maxWidth="@dimen/LSAppsLargeImage_width"
		        android:maxHeight="@dimen/LSAppsLargeImage_height"
		        android:clickable="true"
		        android:onClick="showMDMWebView"
		        android:src="@drawable/ls_mdmsvr" />

		     <TextView
		         android:id="@+id/labelMDMSVR"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:layout_gravity="center_horizontal"
		         android:text="@string/mdmweb_admin_home"
		         android:clickable="true"
		         android:onClick="showMDMWebView"
		         android:textAppearance="?android:attr/textAppearanceMedium" />
	     
	    </LinearLayout>
    
    </LinearLayout>
    

</LinearLayout>