<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/textEnrollCodeLbl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingRight="@dimen/dimension_4"
             android:text="@string/enrollcode"
             android:textAlignment="textEnd"
             android:textAppearance="?android:attr/textAppearanceMedium" />

	     <EditText
	         android:id="@+id/enrollCode"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:ems="8"
	         android:inputType="text"
	         android:maxLength="12" >	
	         
	     </EditText>
             
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:layout_marginTop="10dp" 
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/textServerLbl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingRight="@dimen/dimension_4"
             android:text="@string/enrollserver"
             android:textAlignment="textEnd"
             android:textAppearance="?android:attr/textAppearanceMedium" />

         <TextView
             android:id="@+id/enrollServer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onclickServer"
             android:paddingLeft="@dimen/dimension_4"
             android:textAlignment="textStart"
             android:textAppearance="?android:attr/textAppearanceMedium" />

     </LinearLayout>

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:layout_marginTop="4dp" 
         android:orientation="horizontal" >
	     
	     <TextView
	         android:id="@+id/statusMsg"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center_horizontal"
	         android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
     
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:layout_marginTop="10dp" 
         android:orientation="horizontal" >
     
	     <Button
		      android:id="@+id/btnEnroll"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:text="@string/button_enroll" />
     </LinearLayout>
     
    

</LinearLayout>